# illumidroid-lorcana-bot

./: .gitignore  AGENTS.md  CLAUDE.md  Illumidroid.code-workspace  README_SETUP.md  disney_lorcana_glossary.md  headless_lorcana_engine_porting_blueprint.md  illumidroid_audit_remediation.md  illumidroid_full_ismcts_implementation_spec.md  illumidroid_grammar_gap_proof.md  illumidroid_high_value_fixes_current_state.md  lorcana-bot-architecture.md  phase0-determinism.patch  setup-phase0.sh:Zone.Identifier  tier-a-belief-search-remediation-plan.md  train.sh
lorcana-bot/: .gitignore  PORT-AUDIT.md  README.md  conftest.py  pyproject.toml  requirements.txt
lorcana-bot/decks/: 01_cloudy_ae_aggro.json  02_this_isnt_blurple_es_control.json  03_aa_ap_evasives.json  04_ward_es_control.json  05_roma_aa_evasives.json  06_chnord_ae_aggro.json  07_chnord_ambre_amethyste.json  08_chnord_beerple.json  09_mega_violet_vert.json  10_mega_vixcious.json  11_conflux_blurple_maison.json  12_conflux_fairy_tale.json  13_conflux_pimp_my_ride.json  14_conflux_elastique_incroyable.json  15_conflux_toys_r_us.json  16_loreleague_i_hate_dogs.json  17_loreleague_ciao_maui.json  18_yurple.json  19_blurple.json  20_kingclownpowie_tribe.json  21_pioche_violette.json  22_winn_t_er.json  23_qu_on_lui_coupe_la_tete.json  24_eme_sap.json  25_pyrouette_cacahuete.json
lorcana-bot/engine/: bridge.py  build_vocab.py  card_vocab.json  serialization.py
lorcana-bot/network/: heads.py  model.py  trunk.py
lorcana-bot/search/: belief_filter.py  determinize.py  engine_sim.py  evaluator.py  infoset.py  infoset_tree.py  ismcts.py  node.py
lorcana-bot/tests/: test_belief.py  test_bridge.py  test_determinize.py  test_engine_determinize_world.py  test_infoset.py  test_league.py  test_network.py  test_search.py  test_search_belief.py  test_tier_a_runtime_regressions.py  test_tier_a_training_guards.py  test_world_contract.py
lorcana-rs/: .gitignore  Cargo.toml
(+379 files in other folders)
